Fixie: Not responsive height, but only broken on iPhone SE now

--- a/src/components/terminal/terminal.module.css
+++ b/src/components/terminal/terminal.module.css
@@ -2,8 +2,10 @@
   align-items: center;
   display: flex;
   justify-content: center;
-  height: 200px;
 
+  height: 350px;
+  margin-left: 15px;
+  margin-right: 15px;
   margin-top: 15px;
 }
 
